# gipm

./: .gitignore  Cargo.toml  LICENSE  README.md  todo.md
.github/workflows/: clippy_check.yml  coverage.yml  cross_compile.yml  test.yml
src/: dependency.rs  git.rs  lib.rs  lockfile.rs  main.rs  resolver.rs
tests/: test_lockfile.rs
tests/clean/: test_clean.rs
tests/common/: mod.rs
tests/sync/: dependencies.yaml  test_sync.rs
tests/update/: .gitignore  dependencies.yaml  test_update.rs
